libquantumida/g3/quantum_new_matrix
gates.c:365:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gates.c:543:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 warnings generated.
matrix.c:512:1: error: use of undeclared identifier 'complex_float'
complex_float *v2; // rax 
^
matrix.c:512:16: error: use of undeclared identifier 'v2'
complex_float *v2; // rax 
               ^
matrix.c:515:1: error: use of undeclared identifier 'v2'
v2 = ( complex_float *)calloc( cols * rows, 8uLL); 
^
matrix.c:515:23: error: expected expression
v2 = ( complex_float *)calloc( cols * rows, 8uLL); 
                      ^
matrix.c:515:8: error: use of undeclared identifier 'complex_float'
v2 = ( complex_float *)calloc( cols * rows, 8uLL); 
       ^
matrix.c:516:7: error: use of undeclared identifier 'v2'
if ( !v2 ) 
      ^
matrix.c:521:8: error: use of undeclared identifier 'v2'
v3.t = v2; 
       ^
matrix.c:522:1: error: use of undeclared identifier 'mem_1'
mem_1 += 8 * rows * ( __int64)cols; 
^
matrix.c:523:6: error: use of undeclared identifier 'mem_1'
if ( mem_1 > max_0 ) 
     ^
matrix.c:523:14: error: use of undeclared identifier 'max_0'
if ( mem_1 > max_0 ) 
             ^
matrix.c:524:1: error: use of undeclared identifier 'max_0'
max_0 = mem_1; 
^
matrix.c:524:9: error: use of undeclared identifier 'mem_1'
max_0 = mem_1; 
        ^
12 errors generated.
objcode.c:176:18: warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
  va_start(args, operation);
                 ^
objcode.c:165:35: note: parameter of type 'unsigned char' is declared here
quantum_objcode_put(unsigned char operation, ...)
                                  ^
1 warning generated.
